# z007

./: Makefile  README.md  agent.py  main.py  mcp_config.json.example  pyproject.toml  test.py  test_bedrock_models.py  test_ultra_stress.py
doc/: agent-architecture.md  architecture.md  demo.cast
z007/: __init__.py  agent.py  main.py
zappy/: __init__.py  agent.py  main.py
