

[project]
name = "aws-bedrock-gpt-oss-tester"
version = "0.1.0"
description = "Test script for AWS Bedrock using Llama 3 70B Instruct and gpt-oss-20b with Converse API and tool support."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "botocore",
    "colorlog>=6.9.0",
    "pydantic-ai",
]
