

[project]
name = "aws-bedrock-gpt-oss-tester"
version = "0.1.0"
description = "Test script for AWS Bedrock using Llama 3 70B Instruct and gpt-oss-20b with Converse API and tool support."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "anyio>=4.10.0",
    "boto3",
    "botocore",
    "colorlog>=6.9.0",
    "pydantic-ai",
]

[dependency-groups]
dev = [
    "mypy-boto3-bedrock-runtime>=1.40.0",
    "mypy-boto3-bedrock>=1.40.0",
    "boto3-stubs[essential]>=1.40.0",
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]

[tool.mypy]
# Basic strict settings we can achieve
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# We can be more strict now with better type stubs
disallow_untyped_defs = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_subclassing_any = false

# Third-party libraries without proper stubs
[[tool.mypy.overrides]]
module = "colorlog"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anyio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "select"
ignore_missing_imports = true
